# Tyck

./: .gitignore  LICENSE  PUBLISH.md  README.md  pyproject.toml  test_bugfixes.py  verify_installation.py
.github/workflows/: publish-to-pypi.yml
tests/: __init__.py  test_types.py
tyck/: __init__.py  interface.py  model.py  runtime_validation.py  types_.py  utils.py
tyck/api/: class_based.py  functional.py  utils.py
tyck/core/: builders.py  complex_types.py  types_.py
